--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "e2e": "playwright test",
+    "e2e:install": "playwright install --with-deps",
+    "preview:start": "vite preview --port 4173 --strictPort",
+    "e2e:ci": "start-server-and-test preview:start http://localhost:4173 e2e"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -26,6 +30,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "@sentry/react": "^7.114.0",
     "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "i18next": "^23.10.0",
@@ -49,13 +54,16 @@
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@playwright/test": "^1.48.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "start-server-and-test": "^2.0.3",
+    "wait-on": "^7.0.1",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.2"
+    "vite": "^6.3.6",
+    "vitest": "^3.2.4"
   },
   "browserslist": {
     "production": [
