--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-VITE_AUTH_ENABLED=false
+VITE_AUTH_ENABLED=true
 VITE_KEYCLOAK_URL=https://diam.dnext-pia.com
 VITE_KEYCLOAK_REALM=orbitant-realm
 VITE_KEYCLOAK_CLIENT_ID=orbitant-ui-client
