combined filters, dashboard metrics, and language switcher,fixed search filters, added HR stats, and enabled dynamic translation system.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "keycloak-js": "^24.0.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
