--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.56",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.1",
     "@typescript-eslint/parser": "^7.0.1",
