--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8080/api
+VITE_API_BASE_URL=https://people-in-axis-api.dnext-pia.com/api
 VITE_AUTH_ENABLED=true
 
 # Keycloak
