fix: env updated

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,33 @@
-# Toggle authentication (Keycloak)
-# true  -> Keycloak enabled (default)
-# false -> Auth bypassed for development/testing
-VITE_AUTH_ENABLED=false
-
-# API base URL
+﻿# API Configuration
+# Local development: http://localhost:8080/api
+# Production: https://people-in-axis-api.dnext-pia.com/api
 VITE_API_BASE_URL=http://localhost:8080/api
-# API version prefix (optional). Examples:
-# VITE_API_VERSION=v1   -> requests go to /api/v1/*
-# VITE_API_VERSION=     -> requests go to /api/*
-VITE_API_VERSION=
 
-# Keycloak settings
+# UI Base URL (optional, for redirects)
+VITE_UI_BASE_URL=http://localhost:3000
+
+# Keycloak Configuration
 VITE_KEYCLOAK_URL=http://localhost:8180
-VITE_KEYCLOAK_REALM=people-in-axis
-VITE_KEYCLOAK_CLIENT_ID=people-in-axis-frontend
+VITE_KEYCLOAK_REALM=orbitant-realm
+VITE_KEYCLOAK_CLIENT_ID=orbitant-ui-client
+
+# Authentication
+# Set to "true" to enable authentication, "false" or leave empty to disable
+VITE_AUTH_ENABLED=true
+
+# Keycloak Redirect (optional)
+VITE_KEYCLOAK_REDIRECT_URI=
+VITE_KEYCLOAK_REDIRECT_PATH=
+
+# API Performance Tuning (optional)
+# Deduplication window in milliseconds (default: 250)
+VITE_API_DEDUP_MS=250
+# Idempotency TTL in milliseconds (default: 5000)
+VITE_API_IDEMP_TTL_MS=5000
+
+# Sentry Configuration (optional)
+VITE_SENTRY_DSN=
+VITE_RELEASE=
+
+# API Version (optional)
+VITE_API_VERSION=
