--- a/.env.local
+++ b/.env.local
@@ -1,21 +1,8 @@
-VITE_API_BASE_URL=https://people-in-axis-api.dnext-pia.com/api
-
-VITE_AUTH_ENABLED=true
-
-
-
-# Keycloak
-
+﻿VITE_API_BASE_URL=http://localhost:8080/api
+VITE_UI_BASE_URL=http://localhost:3000
 VITE_KEYCLOAK_URL=https://diam.dnext-pia.com
-
 VITE_KEYCLOAK_REALM=orbitant-realm
-
 VITE_KEYCLOAK_CLIENT_ID=orbitant-ui-client
-
-
-
-# Opsiyonel (istek dedup ve idempotency süresi)
-
+VITE_AUTH_ENABLED=true
 VITE_API_DEDUP_MS=250
-
 VITE_API_IDEMP_TTL_MS=5000
