--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "e2e": "playwright test",
     "e2e:install": "playwright install --with-deps",
     "preview:start": "vite preview --port 4173 --strictPort",
-    "e2e:ci": "start-server-and-test preview:start http://localhost:4173 e2e"
+    "e2e:ci": "start-server-and-test preview:start http://localhost:4173 e2e",
+    "i18n:translate": "node src/translate.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -45,7 +46,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
