--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,11 @@ server {
   gzip on;
   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
+  client_header_buffer_size 16k;
+  large_client_header_buffers 4 32k;
+  client_max_body_size 128M;
+  proxy_max_temp_file_size 512M;
+
   location / {
     try_files $uri $uri/ /index.html;
   }
