--- a/nginx.conf
+++ b/nginx.conf
@@ -1,64 +1,13 @@
-worker_processes auto;
-error_log "/var/log/nginx/error.log";
-pid "/tmp/nginx.pid";
+server {
+  listen 80;
+  server_name _;
+  root /usr/share/nginx/html;
+  index index.html;
 
-events {
-    worker_connections 1024;
-}
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-http {
-    client_max_body_size 128M;
-    proxy_max_temp_file_size 512M;
-    client_header_buffer_size 16k;
-    large_client_header_buffers 4 32k;
-
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    log_format main '$remote_addr - $remote_user [$time_local] '
-                    '"$request" $status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log "/var/log/nginx/access.log";
-    add_header X-Frame-Options SAMEORIGIN;
-
-    proxy_connect_timeout 300s;
-    proxy_send_timeout 300s;
-    proxy_read_timeout 300s;
-    send_timeout 300s;
-
-    client_body_temp_path "/tmp/client_temp" 1 2;
-    proxy_temp_path "/tmp/proxy_temp_path" 1 2;
-    fastcgi_temp_path "/tmp/fastcgi_temp" 1 2;
-    scgi_temp_path "/tmp/scgi_temp" 1 2;
-    uwsgi_temp_path "/tmp/uwsgi_temp" 1 2;
-
-    server_tokens off;
-
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay off;
-
-    gzip on;
-    gzip_disable "msie6";
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.0;
-    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
-
-    keepalive_timeout 65;
-    ssl_protocols TLSv1.2;
-
-    server {
-        listen 80;
-        server_name _;
-        root /usr/share/nginx/html;
-        index index.html;
-
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-    }
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
 }
