--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
 
     /* Paths */
     "baseUrl": ".",
@@ -39,5 +45,19 @@
     }
   },
   "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage",
+    // Test files are excluded from build by Vite, but needed for type checking
+    // "**/*.test.ts",
+    // "**/*.test.tsx",
+    // "**/*.spec.ts",
+    // "**/*.spec.tsx",
+    // "src/test/**",
+    "tests/**",
+    "**/*.config.*",
+    "**/vitest.config.*"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
