fix: #type error

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,8 +11,6 @@
     "src/test/**",
     "tests/**",
     "**/*.config.*",
-    "**/vitest.config.*",
-    "**/playwright.config.*"
+    "**/vitest.config.*"
   ]
 }
-
