--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p tsconfig.json --noEmit && vite build",
+    "build": "tsc -p tsconfig.build.json --noEmit && vite build",
     "build:prod": "NODE_ENV=production vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --max-warnings 0",
@@ -48,8 +48,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.0",
-    "yup": "^1.3.3",
-    "dotenv": "^16.4.5"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
@@ -66,6 +65,7 @@
     "@typescript-eslint/parser": "^7.0.1",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
