--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^2.30.0",
     "i18next": "^23.10.0",
     "keycloak-js": "^24.0.1",
+    "lucide-react": "^0.561.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
